--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -6,7 +6,7 @@ on:
       - master
   pull_request:
     branches:
-      - develop
+      - master
 
 jobs:
   build:
@@ -26,4 +26,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint ./calculator
