add: add doctest

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,4 @@ jobs:
         pylint ./calculator
     - name: Test with pytest
       run: |
-        pytest -v --cov=./calculator
+        pytest --doctest-modules -v --cov=./calculator
