--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,1 +1,15 @@
 site_name: My Docs
+
+theme:
+  name: "material"
+
+plugins:
+  - search
+  - mkdocstrings:
+      default_handler: python
+      handlers:
+        python:
+          options:
+            docstring_style: numpy
+            show_source: false
+            show_submodules: true
